# serializer version: 1
# name: test_light_entities_snapshot[cloud_nexity_rail_din_europe.json][light.maple_residence_garage_ceiling_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.maple_residence_garage_ceiling_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'io://1234-5678-1698/82173',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_entities_snapshot[cloud_nexity_rail_din_europe.json][light.maple_residence_garage_ceiling_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': None,
      'friendly_name': 'Garage Ceiling Light',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.maple_residence_garage_ceiling_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_light_entities_snapshot[cloud_nexity_rail_din_europe.json][light.maple_residence_study_ceiling_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.maple_residence_study_ceiling_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'io://1234-5678-1698/2867634',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_entities_snapshot[cloud_nexity_rail_din_europe.json][light.maple_residence_study_ceiling_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': None,
      'friendly_name': 'Study Ceiling Light',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.maple_residence_study_ceiling_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_light_entities_snapshot[cloud_nexity_rail_din_europe.json][light.maple_residence_terrace_ceiling_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.maple_residence_terrace_ceiling_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'io://1234-5678-1698/11944017',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_entities_snapshot[cloud_nexity_rail_din_europe.json][light.maple_residence_terrace_ceiling_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': None,
      'friendly_name': 'Terrace Ceiling Light',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.maple_residence_terrace_ceiling_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_light_entities_snapshot[local_somfy_tahoma_switch_europe_3.json][light.dining_room_wall_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.dining_room_wall_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'io://1234-5678--9373/5488574',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_entities_snapshot[local_somfy_tahoma_switch_europe_3.json][light.dining_room_wall_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 143,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'Dining Room Wall Light',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.dining_room_wall_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_light_entities_snapshot[local_somfy_tahoma_switch_europe_3.json][light.guest_room_ceiling_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.guest_room_ceiling_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'io://1234-5678--9373/1170079',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_entities_snapshot[local_somfy_tahoma_switch_europe_3.json][light.guest_room_ceiling_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 143,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'Guest Room Ceiling Light',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.guest_room_ceiling_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_light_entities_snapshot[local_somfy_tahoma_switch_europe_3.json][light.kitchen_ceiling_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.kitchen_ceiling_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'io://1234-5678--9373/8381989',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_entities_snapshot[local_somfy_tahoma_switch_europe_3.json][light.kitchen_ceiling_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'Kitchen Ceiling Light',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.kitchen_ceiling_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_light_entities_snapshot[local_somfy_tahoma_switch_europe_3.json][light.living_room_ceiling_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.living_room_ceiling_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'io://1234-5678--9373/5740023',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_entities_snapshot[local_somfy_tahoma_switch_europe_3.json][light.living_room_ceiling_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 143,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'Living Room Ceiling Light',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.living_room_ceiling_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_light_entities_snapshot[local_somfy_tahoma_v2_europe.json][light.hallway_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.hallway_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'io://1234-5678-3293/5046564',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_entities_snapshot[local_somfy_tahoma_v2_europe.json][light.hallway_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'Hallway Light',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.hallway_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_light_entities_snapshot[local_somfy_tahoma_v2_europe.json][light.light_terras_rgb-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.light_terras_rgb',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'io://1234-5678-3293/14608095',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_entities_snapshot[local_somfy_tahoma_v2_europe.json][light.light_terras_rgb-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 150,
      'color_mode': <ColorMode.RGB: 'rgb'>,
      'friendly_name': 'Light Terras RGB',
      'hs_color': tuple(
        268.235,
        68.0,
      ),
      'rgb_color': tuple(
        128,
        64,
        200,
      ),
      'supported_color_modes': list([
        <ColorMode.RGB: 'rgb'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.26,
        0.131,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.light_terras_rgb',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
